kubernetes/services/actual-budget/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actual-budget
  labels:
    app.kubernetes.io/name: actual-budget
